open modules